@@ -1,3 +1,13 @@
+2004-12-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b304
+
+	* Change: Added target="_blank" to powered by link. (RFE #1020347)
+
+	* New: Added login/logout link to view_photo. (RFE #582856 / #976764)
+
+	* Fix: comments_addType was broken. (since b295)
+
+	* Fix: Position of the add vote and add comment links was not used in stats.
+
 2004-12-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b303
 
 	* Remove debug code
